--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.8",
     "firebase": "^11.6.0",
     "framer-motion": "^12.9.4",
+    "html-to-image": "^1.11.13",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
