--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.6.0",
     "framer-motion": "^12.9.4",
     "html-to-image": "^1.11.13",
+    "html5-qrcode": "^2.3.8",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
