--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.17",
     "webpack": "^5.99.5",
     "webpack-cli": "^6.0.1",
