--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.8",
+    "date-fns": "^3.6.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.9.4",
     "html-to-image": "^1.11.13",
