--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 GENERATE_SOURCEMAP=false
 DISABLE_ESLINT_PLUGIN=true
 FAST_REFRESH=false
+
+# EmailJS Configuration
+REACT_APP_EMAILJS_SERVICE_ID=service_ve9ok89
+REACT_APP_EMAILJS_TEMPLATE_ID=template_vmeoehg
+REACT_APP_EMAILJS_PUBLIC_KEY=yYiZPKUBRx4xt0_Bv
